<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarVehiculo">

    <ScrollView
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tituloRegVehiculoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/tituloVehiculo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/placaVehiculoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/placaVehiculo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/claveRegUsuarioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/marcaVehiculo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/costoVehiculoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/costoVehiculo"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txt_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/matriculadoVehiculoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/matriculadoVehiculo"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/matriculadoSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="7dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_color_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_color"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/confirmarVehiculoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/confirmarVehiculo" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>